--- a/css/steckbrief.css
+++ b/css/steckbrief.css
@@ -5,10 +5,6 @@
 	font-family: 'Roboto';
 	font-size: 20px;
 
-	float: left;
-	width: 40%;
-  margin-left: 10%;
-  margin-top: 2%;
 
 	background: rgba(255, 255, 255, 0.27);
 
@@ -16,22 +12,16 @@
 	border-collapse: separate;
 	border: 1px solid rgba(255, 255, 255, 0.48);
 
-	
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(9.8px);
   -webkit-backdrop-filter: blur(9.8px);
 }
 
 td {
+	
   text-align: left;
-
-	left: 15%;
 	padding: 2%;
 
 	border: 1px solid rgba(255, 255, 255, 0.48);
 }
 
-#homeimage {
-  	margin-top: 2%;
-  	width: 30%;
-}
