--- a/css/text.css
+++ b/css/text.css
@@ -6,7 +6,7 @@ h1 {
     margin: 30px auto;
     background: none;
     text-align: center;
-    font-size: 40px;
+    font-size: 45px;
 	font-family: 'Roboto';
 	text-decoration: underline;
 }
